--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,8 @@
   "rules": {
     "indent": ["error", 2],
     "linebreak-style": ["error", "unix"],
-    "quotes": ["error", "double"],
-    "semi": ["error", "always"]
+    "quotes": ["warn", "double"],
+    "semi": ["warn", "always"],
+    "no-unused-vars": "warn"
   }
 }
