--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -19,7 +19,7 @@
     },
     "ecmaVersion": "latest",
     "sourceType": "module",
-    "project": "client/tsconfig.json"
+    "project": "./tsconfig.json"
   },
   "plugins": ["react", "@typescript-eslint", "prettier"],
   "rules": {
