--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -10,7 +10,8 @@
     "airbnb",
     "airbnb-typescript",
     "plugin:import/typescript",
-    "plugin:prettier/recommended"
+    "plugin:prettier/recommended",
+    "@typescript-eslint/parser"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
