--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -10,8 +10,7 @@
     "airbnb",
     "airbnb-typescript",
     "plugin:import/typescript",
-    "plugin:prettier/recommended",
-    "@typescript-eslint/parser"
+    "plugin:prettier/recommended"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
