--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -10,7 +10,8 @@
     "airbnb",
     "airbnb-typescript",
     "plugin:import/typescript",
-    "plugin:prettier/recommended"
+    "plugin:prettier/recommended",
+    "plugin:cypress/recommended"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -36,5 +37,5 @@
     ],
     "no-underscore-dangle": "off"
   },
-  "ignorePatterns": ["**/*.html"]
+  "ignorePatterns": ["**/*.html", "/cypress/**", "**.config.ts"]
 }
